# Boardgame

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  TODO.md  diagramme_de_classe.mdj
include/: AssetManager.hpp  Board.hpp  ButinBoard.hpp  ButinPiece.hpp  Button.hpp  CheckersBoard.hpp  CheckersGame.hpp  CheckersPiece.hpp  CheckersRules.hpp  Constants.hpp  EventHandler.hpp  FontNotFoundException.hpp  Game.hpp  GameChoice.hpp  GameChoiceFlags.hpp  GameType.hpp  GameTypeNotFoundException.hpp  InputHandler.hpp  Launcher.hpp  MainMenu.hpp  Menu.hpp  Piece.hpp  Player.hpp  Rules.hpp  State.hpp  StateManager.hpp  Types.hpp  UI.hpp  UIHandler.hpp
include/exception/: GameTypeInvalidException.hpp
include/game/: Butin.hpp  Checkers.hpp  CheckersView.hpp  Controller.hpp  GameStatus.hpp  Model.hpp  ModelFlags.hpp  View.hpp  ViewFlags.hpp
include/game/Butin/: Butin.hpp  ButinController.hpp  ButinView.hpp
include/game/bulltricker/: Bulltricker.hpp  BulltrickerBoard.hpp  BulltrickerController.hpp  BulltrickerFlags.hpp  BulltrickerPiece.hpp  BulltrickerView.hpp
include/game/butin/: Butin.hpp  ButinBoard.hpp  ButinController.hpp  ButinFlags.hpp  ButinPiece.hpp  ButinStatus.hpp  ButinView.hpp
include/game/checkers/: Checkers.hpp  CheckersBoard.hpp  CheckersController.hpp  CheckersFlags.hpp  CheckersPiece.hpp  CheckersStatus.hpp  CheckersView.hpp
src/: Board.cpp  BoardGame.cpp  ButinBoard.cpp  ButinPiece.cpp  CheckersBoard.cpp  CheckersGame.cpp  CheckersPiece.cpp  CheckersRules.cpp  EventHandler.cpp  GameChoice.cpp  Launcher.cpp  MainMenu.cpp  Menu.cpp  Piece.cpp  Player.cpp  State.cpp  StateManager.cpp  UIHandler.cpp  main.cpp
src/exception/: FontNotFoundException.cpp  GameTypeInvalidException.cpp  GameTypeNotFoundException.cpp
src/game/: Butin.cpp  Checkers.cpp  CheckersController.cpp  CheckersView.cpp  Controller.cpp  Model.cpp  ModelFlags.cpp  View.cpp
src/game/Butin/: Butin.cpp  ButinController.cpp  ButinView.cpp
src/game/bulltricker/: Bulltricker.cpp  BulltrickerBoard.cpp  BulltrickerController.cpp  BulltrickerFlags.cpp  BulltrickerPiece.cpp  BulltrickerView.cpp
src/game/butin/: Butin.cpp  ButinBoard.cpp  ButinController.cpp  ButinFlags.cpp  ButinPiece.cpp  ButinView.cpp
src/game/checkers/: Checkers.cpp  CheckersBoard.cpp  CheckersController.cpp  CheckersFlags.cpp  CheckersPiece.cpp  CheckersView.cpp
src/main/cpp/fr/u_paris/boardgame/code/game/: Board.cpp  Piece.cpp
src/main/cpp/fr/u_paris/boardgame/include/: Types.hpp
src/main/cpp/fr/u_paris/boardgame/include/constants/: Constants.hpp
src/main/cpp/fr/u_paris/boardgame/include/game/: Board.hpp  Controller.hpp  Game.hpp  GameFactory.hpp  Piece.hpp  PieceDistributor.hpp  View.hpp
src/main/cpp/fr/u_paris/boardgame/src/: main.cpp
(+26 files in other folders)
